Got freq analysis part working

--- a/IVP_Project_freq.ipynb
+++ b/IVP_Project_freq.ipynb
@@ -15,7 +15,8 @@
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import glob\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import quaternion"
    ]
   },
   {
